--- a/Post.html
+++ b/Post.html
@@ -40,24 +40,38 @@
 
         <div class="mainbody">
             <div class="post_card" id="card">
-                <div>Subheader <div>Part Text</div><a class="post-image-holder" id="linkBackground"> part Image
-                    <div class="centeredbox">
-                        <div class="centered" id="title">Title of the post</div>
+                <div class="SubDivHolder">
+                    <div class="SubDiv">
+                        <div class="post-title-holder">
+                            <div class="centered" id="title">Title of the post</div>
+                        </div>
+
+                        <div class="section">
+                            <div>Description:</div>
+                            <div id="postdescription">Description of the Post</div>
+                        </div>
+                        <div class="section">
+                            <a id="extralink2"> Free Post Link </a>
+                        </div>
+                        <div class="section">
+                            Files:
+                            <a id="extralink"> extra link </a>
+
+                            <a id="patreonlink"> patreon link </a>
+                        </div>
+                        <div class="section">
+                            <div id="postdate">Updated: 2 days ago</div>
+                            <div id="originaldate">Published: 8 days ago</div>
+                        </div>
+
+                        <div class="section" id="type">Log:</div>
                     </div>
-                    <div class="date" id="postdate">Post Date</div>
-                    <div class="ogdate" id="originaldate">OG Date</div>
-                    <div class="typeOfPost" id="type"></div>
-                </a></div>
-               
-
-                <div class="bottom-holder">
-                    <div class="description" id="postdescription">Description of the Post</div>
-
-                    <a class="normal-link" id="extralink"> extra link </a>
-
-                    <a class="patreon-link" id="patreonlink"> patreon link </a>
+                </div>
+                <div class="SubDiv">
+                    <img class="post-image-holder" id="postImage" src="/tutorials/Images/Thumbnails/3d1.jpg" />
                 </div>
             </div>
+
             <div>Related Posts:</div>
             <div class="grid-container" id="output">
                 <div>Related 1</div>
