new Setup update

--- a/Post.html
+++ b/Post.html
@@ -57,12 +57,13 @@
                             <div class="centered" id="title">Glitch/Wireframe Shader Graph</div>
                         </div>
 
-                        <div class="section">
-                            <div>DESCRIPTION:</div>
-                            <div id="postdescription">
-                                A Glitchy Wireframe effect using split normals and colored backfaces, for Shader Graph
+                        <div style="display: flex; margin: 10px">
+                            <div class="postTags" style="background-color: #416eb3; border: 2px solid #8193ff">URP</div>
+                            <div class="postTags" style="background-color: #416eb3; border: 2px solid #8193ff">
+                                Shader Graph
                             </div>
                         </div>
+
                         <div class="section">
                             <div>
                                 <span class="patreonDownloadLink"><patreon></patreon> READ POST</span>
@@ -73,9 +74,8 @@
                             Source Files ($10):
                             <div>
                                 <span class="patreonDownloadLink"><patreon></patreon> DOWNLOAD</span>
-                                <span id="extralink">extra link </span>
+                                <span id="extralink3">extra link </span>
                             </div>
-
                             <div>
                                 <span class="patreonDownloadLink"><patreon></patreon> DOWNLOAD</span>
                                 <span id="patreonlink">extra link </span>
@@ -91,20 +91,24 @@
                             </div>
                         </div>
 
-                        <div class="section" id="type">Log:</div>
+                        <div class="section" id="type">
+                            <div class="dropdown">
+                                <button class="dropdown-btn">History</button>
+                                <div class="dropdown-content">
+                                    <a href="#link1">Date released</a>
+                                    <a href="#link2">update blabla</a>
+                                    <a href="#link3">Another update</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="SubDiv">
                     <img class="post-image-holder" id="postImage" src="/tutorials/Images/Gifs/preview.gif" />
-                    <div style="display: flex">
-                        <div class="postTags" style="background-color: #416eb3; border: 2px solid #8193ff">URP</div>
-                        <div class="postTags" style="background-color: #416eb3; border: 2px solid #8193ff">
-                            Shader Graph
-                        </div>
-                    </div>
+
                     <div class="section">
-                        <div id="postdate">Updated: 2 days ago (20-05-2024)</div>
-                        <div id="originaldate">Published: 8 days ago (20-05-2024)</div>
+                        <div id="postdate"><span class="patreonDownloadLink">Updated:</span> 20-05-2024</div>
+                        <div id="originaldate"><span class="patreonDownloadLink">Published:</span> 20-05-2024</div>
                     </div>
                 </div>
             </div>
