--- a/Post.html
+++ b/Post.html
@@ -19,7 +19,12 @@
 
     <body>
         <div class="header-img">
-            <div class="hero-text">
+            <div class="hero-text">  <div class="section">
+                        <div>DESCRIPTION:</div>
+                        <div id="postdescription">
+                            A Glitchy Wireframe effect using split normals and colored backfaces, for Shader Graph
+                        </div>
+                    </div>
                 <img src="Images/minionsart.png" width="300px" style="padding-top: 20px" />
 
                 <div class="header2">Tutorials</div>
