--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
 
         <div class="tab">
             <button class="tablinks" id="allbutton" onclick="showfilter(event);">All</button>
-            <button class="tablinks" onclick="showfilter(event,'godot');">Godot</button>
-            <button class="tablinks" onclick="showfilter(event,'built-in');">Built-in</button>
-            <button class="tablinks" onclick="showfilter(event,'urp');">URP</button>
-            <button class="tablinks" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
-            <button class="tablinks" onclick="showfilter(event,'3d');">3D</button>
-            <button class="tablinks" onclick="showfilter(event,'texturing');">Textures</button>
-            <button class="tablinks" onclick="showfilter(event,'asset-pack');">Asset Pack</button>
-            <button class="tablinks" onclick="showfilter(event,'gameplay');">Gameplay</button>
-            <button class="tablinks" onclick="showfilter(event,'design');">Design</button>
-            <button class="tablinks" onclick="showfilter(event,'video');">Video</button>
-            <button class="tablinks" onclick="showfilter(event,'other');">Other</button>
+            <button class="tablinks" id="godot" onclick="showfilter(event,'godot');">Godot</button>
+            <button class="tablinks" id="built-in" onclick="showfilter(event,'built-in');">Built-in</button>
+            <button class="tablinks" id="urp" onclick="showfilter(event,'urp');">URP</button>
+            <button class="tablinks" id="shader-graph" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
+            <button class="tablinks" id="3d" onclick="showfilter(event,'3d');">3D</button>
+            <button class="tablinks" id="texturing" onclick="showfilter(event,'texturing');">Textures</button>
+            <button class="tablinks" id="asset-pack" onclick="showfilter(event,'asset-pack');">Asset Pack</button>
+            <button class="tablinks" id="gameplay" onclick="showfilter(event,'gameplay');">Gameplay</button>
+            <button class="tablinks" id="design" onclick="showfilter(event,'design');">Design</button>
+            <button class="tablinks" id="video" onclick="showfilter(event,'video');">Video</button>
+            <button class="tablinks" id="other" onclick="showfilter(event,'other');">Other</button>
         </div>
 
         <div class="mainbody">
