--- a/Posts.html
+++ b/Posts.html
@@ -29,7 +29,7 @@
                     <div class="ogdate" id="originaldate">OG Date</div>
                     <div class="typeOfPost" id="type"></div>
                     <div class="centeredbox">
-                        <div class="centered" id="title">Title of the post</div>
+                        <div class="centeredSmaller" id="title">Title of the post</div>
                     </div>
                 </a>
 
@@ -57,7 +57,7 @@
             <div class="hero-text">
                 <img src="Images/minionsart.png" width="300px" style="padding-top: 20px" />
 
-                <div class="header2">Tutorials * Updating site...</div>
+                <div class="header2">Tutorials</div>
 
                 <a href="https://twitter.com/minionsart"><twitter></twitter></a>
 
@@ -69,19 +69,43 @@
             </div>
         </div>
         <div class="tab">
-            <button class="tablinks" id="allbutton"><a href="/tutorials/index.html">All</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=godot">Godot</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=built-in">Built-in</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=urp">URP</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=shader-graph">Shader Graph</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=3d">3D</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=texturing">Textures</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=asset-pack">Asset Pack</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=gameplay">Gameplay</a></button>
+            <a href="/tutorials/index.html"
+                ><button class="tablinks" id="allbutton"><all></all> All</button></a
+            >
+            <a href="/tutorials/index.html?type=godot"
+                ><button class="tablinks"><godot></godot> Godot</button></a
+            >
+            <a href="/tutorials/index.html?type=built-in"
+                ><button class="tablinks"><builtin></builtin> Built-in</button></a
+            >
+            <a href="/tutorials/index.html?type=urp"
+                ><button class="tablinks"><urp></urp> URP</button></a
+            >
+            <a href="/tutorials/index.html?type=shader-graph"
+                ><button class="tablinks"><shadergraph></shadergraph> Shader Graph</button></a
+            >
+            <a href="/tutorials/index.html?type=3d">
+                <button class="tablinks"><i3d></i3d> 3D</button></a
+            >
+            <a href="/tutorials/index.html?type=texturing"
+                ><button class="tablinks"><texture></texture> Textures</button></a
+            >
+            <a href="/tutorials/index.html?type=asset-pack"
+                ><button class="tablinks"><assetpack></assetpack> Asset Pack</button></a
+            >
+            <a href="/tutorials/index.html?type=gameplay"
+                ><button class="tablinks"><gameplay></gameplay> Gameplay</button></a
+            >
 
-            <button class="tablinks"><a href="/tutorials/index.html?type=design">Design</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=video">Video</a></button>
-            <button class="tablinks"><a href="/tutorials/index.html?type=other">Other</a></button>
+            <a href="/tutorials/index.html?type=design"
+                ><button class="tablinks"><design></design> Design</button></a
+            >
+            <a href="/tutorials/index.html?type=video"
+                ><button class="tablinks"><videoI></videoI> Video</button></a
+            >
+            <a href="/tutorials/index.html?type=other"
+                ><button class="tablinks"><other></other> Other</button></a
+            >
         </div>
 
         <div class="mainbody">
@@ -128,10 +152,13 @@
 
                         <iframe
                             id="videoPreview"
-                            title="test"
                             width="450"
                             height="315"
-                            src="https://www.youtube.com/embed/VIDEO_ID?start=60&autoplay=1"
+                            src="#"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin"
                             allowfullscreen></iframe>
 
                         <div class="section" id="dates"></div>
