--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
                 showAllPostsDescending();
                 ShowStartButton();
             }
-            /*  $("#body").ready(function () {
-                showAllPostsDescending();
-                ShowStartButton();
-
-                //showNew();
-            });*/
         </script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,7 +43,7 @@
                     <div class="ogdate" id="originaldate">OG Date</div>
                     <div class="typeOfPost" id="type"></div>
                     <div class="centeredbox">
-                        <div class="centered" id="title">Title of the post</div>
+                        <div class="centeredSmaller" id="title">Title of the post</div>
                     </div>
                 </a>
 
@@ -75,7 +69,7 @@
             <div class="hero-text">
                 <img src="Images/minionsart.png" width="300px" style="padding-top: 20px" />
 
-                <div class="header2">Tutorials * Updating site...</div>
+                <div class="header2">Tutorials</div>
 
                 <a href="https://twitter.com/minionsart"><twitter></twitter></a>
 
@@ -88,18 +82,28 @@
         </div>
 
         <div class="tab">
-            <button class="tablinks" id="allbutton" onclick="showfilter(event);">All</button>
-            <button class="tablinks" id="godot" onclick="showfilter(event,'godot');">Godot</button>
-            <button class="tablinks" id="built-in" onclick="showfilter(event,'built-in');">Built-in</button>
-            <button class="tablinks" id="urp" onclick="showfilter(event,'urp');">URP</button>
-            <button class="tablinks" id="shader-graph" onclick="showfilter(event,'shader-graph');">Shader Graph</button>
-            <button class="tablinks" id="3d" onclick="showfilter(event,'3d');">3D</button>
-            <button class="tablinks" id="texturing" onclick="showfilter(event,'texturing');">Textures</button>
-            <button class="tablinks" id="asset-pack" onclick="showfilter(event,'asset-pack');">Asset Pack</button>
-            <button class="tablinks" id="gameplay" onclick="showfilter(event,'gameplay');">Gameplay</button>
-            <button class="tablinks" id="design" onclick="showfilter(event,'design');">Design</button>
-            <button class="tablinks" id="video" onclick="showfilter(event,'video');">Video</button>
-            <button class="tablinks" id="other" onclick="showfilter(event,'other');">Other</button>
+            <button class="tablinks" id="allbutton" onclick="showfilter(event);"><all></all> All</button>
+            <button class="tablinks" id="godot" onclick="showfilter(event,'godot');"><godot></godot> Godot</button>
+            <button class="tablinks" id="built-in" onclick="showfilter(event,'built-in');">
+                <builtin></builtin> Built-in
+            </button>
+            <button class="tablinks" id="urp" onclick="showfilter(event,'urp');"><urp></urp> URP</button>
+            <button class="tablinks" id="shader-graph" onclick="showfilter(event,'shader-graph');">
+                <shadergraph></shadergraph> Shader Graph
+            </button>
+            <button class="tablinks" id="3d" onclick="showfilter(event,'3d');"><i3d></i3d> 3D</button>
+            <button class="tablinks" id="texturing" onclick="showfilter(event,'texturing');">
+                <texture></texture> Textures
+            </button>
+            <button class="tablinks" id="asset-pack" onclick="showfilter(event,'asset-pack');">
+                <assetpack></assetpack> Asset Pack
+            </button>
+            <button class="tablinks" id="gameplay" onclick="showfilter(event,'gameplay');">
+                <gameplay></gameplay> Gameplay
+            </button>
+            <button class="tablinks" id="design" onclick="showfilter(event,'design');"><design></design> Design</button>
+            <button class="tablinks" id="video" onclick="showfilter(event,'video');"><videoI></videoI> Video</button>
+            <button class="tablinks" id="other" onclick="showfilter(event,'other');"><other></other> Other</button>
         </div>
 
         <div class="mainbody">
