--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
     <head>
-           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Weows Head">
-    <meta property="og:type" content="image/png">
-    <meta property="og:url" content="https://weowhead.com/">
-    <meta property="og:image" content="https://weowhead.com/weowhead.png">
+        <meta property="og:title" content="Minionsart Tutorials" />
+        <meta property="og:type" content="image/png" />
+        <meta property="og:url" content="https://https://minionsart.github.io/tutorials/" />
+        <meta property="og:image" content="/tutorials/Images/kat.jpg" />
         <link rel="stylesheet" type="text/css" href="/tutorials/style.css" />
         <link href="https://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet" />
         <link rel="shortcut icon" href="/tutorials/Images/favicon.ico" />
