--- a/Posts.html
+++ b/Posts.html
@@ -3,6 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/tutorials/style.css" />
         <meta charset="UTF-8" />
+          <meta property="og:title" content="Minionsart Tutorials" />
+        <meta property="og:type" content="image/png" />
+        <meta property="og:url" content="https://https://minionsart.github.io/tutorials/" />
+        <meta property="og:image" content="/tutorials/Images/kat.jpg" />
         <link rel="shortcut icon" href="/tutorials/Images/favicon.ico" />
         <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="/tutorials/TutData.json"></script>
