--- a/Posts.html
+++ b/Posts.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/tutorials/style.css" />
         <meta charset="UTF-8" />
-          <meta property="og:title" content="Minionsart Tutorials" />
+        <meta property="og:title" content="Minionsart Tutorials" />
         <meta property="og:type" content="image/png" />
         <meta property="og:url" content="https://https://minionsart.github.io/tutorials/" />
         <meta property="og:image" content="/tutorials/Images/kat.jpg" />
@@ -151,7 +151,7 @@
                         <img
                             class="post-image-holder"
                             id="postPreview"
-                            src="/tutorials/Images/Gifs/placeholder.png"
+                            src="#"
                             onerror="this.onerror=null; this.src='/tutorials/Images/Gifs/placeholder.png';" />
 
                         <iframe
