--- a/Posts.html
+++ b/Posts.html
@@ -151,7 +151,7 @@
                         <img
                             class="post-image-holder"
                             id="postPreview"
-                            src="#"
+                            src="/tutorials/Images/empty.png"
                             onerror="this.onerror=null; this.src='/tutorials/Images/Gifs/placeholder.png';" />
 
                         <iframe
