--- a/grasssystem.html
+++ b/grasssystem.html
@@ -22,7 +22,7 @@
             });
 
             function HandlePage() {
-               // ShowPostFromLink();
+                // ShowPostFromLink();
             }
         </script>
 
@@ -156,7 +156,7 @@
                         <img
                             class="post-image-holder"
                             id="postPreview"
-                            src="/tutorials/Images/empty.png"
+                            src="/tutorials/Images/Avif/grass_system.avif"
                             onerror="this.onerror=null; this.src='/tutorials/Images/Gifs/placeholder.png';" />
 
                         <div class="section" id="dates"></div>
@@ -171,7 +171,7 @@
             </div>
             <div class="post_card" id="card">
                 <div class="post-title-holder">
-                    <div class="centered" id="title">Basic</div>
+                    <div class="centered" id="title">+Cutting and Burning</div>
 
                     <div style="display: flex; margin: 10px" id="type"></div>
                 </div>
@@ -181,7 +181,7 @@
                             <div id="tinyLink" style="font-size: 10px"></div>
                             <div><span class="dates">Description: </span></div>
                             <div id="postdescription" class="post_description">
-                                A Glitchy Wireframe effect using split normals and colored backfaces, for Shader Graph
+                                
                             </div>
                         </div>
 
