--- a/grasssystem.html
+++ b/grasssystem.html
@@ -22,7 +22,7 @@
             });
 
             function HandlePage() {
-                // ShowPostFromLink();
+                ShowPostFromLink();
             }
         </script>
 
@@ -64,6 +64,8 @@
                 <div class="header2">Tutorials</div>
 
                 <a href="https://twitter.com/minionsart"><twitter></twitter></a>
+
+                <a href="https://bsky.app/profile/minionsart.bsky.social"><bluesky></bluesky></a>
 
                 <a href="https://www.youtube.com/c/MinionsArt"><youtube></youtube></a>
 
@@ -120,7 +122,7 @@
             </div>
             <div class="post_card" id="card">
                 <div class="post-title-holder">
-                    <div class="centered" id="title">Basic</div>
+                    <div class="centered" id="title">Base Grass System</div>
 
                     <div style="display: flex; margin: 10px" id="type"></div>
                 </div>
@@ -129,25 +131,26 @@
                         <div class="section">
                             <div id="tinyLink" style="font-size: 10px"></div>
                             <div><span class="dates">Description: </span></div>
-                            <div id="postdescription" class="post_description">
-                                A Glitchy Wireframe effect using split normals and colored backfaces, for Shader Graph
-                            </div>
+                            <div id="postdescription" class="post_description">Grass system basic setup</div>
                         </div>
 
                         <div class="section">
                             <div><span class="postLink" id="postlink">Free post </span> Free resources!</div>
+                            <div><span class="postLink" id="postlink">Runtime script </span> Free resources!</div>
                         </div>
                         <div class="sectionbackground">
                             Source Files:
-                            <div id="sourcelinks"></div>
-                        </div>
-                        <div class="section" id="extraLinks"></div>
-
-                        <div class="section" style="position: absolute; bottom: 5px; max-width: 450px">
-                            <div class="dropdown-content">
-                                <span class="dates">Permission: </span> This asset can be used in both free and
-                                commercial projects. You can modify it to suit your own needs. Credit is not necessary,
-                                but highly appreciated. You may not resell the assets on their own.
+                            <div id="sourcelinks">
+                                <div class="section" id="extraLinks">
+                                    <div>
+                                        <span class="patreonDownloadLink"
+                                            ><a href="https://www.patreon.com/posts/snow-and-icicles-118217354"
+                                                >DOWNLOAD
+                                            </a></span
+                                        >
+                                        <patreon></patreon>URP Files ($10 Tier)
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -169,48 +172,47 @@
                     </div>
                 </div>
             </div>
-            <div class="post_card" id="card">
+            <br />
+            <div class="post_card" id="card2">
                 <div class="post-title-holder">
-                    <div class="centered" id="title">+Cutting and Burning</div>
+                    <div class="centered" id="title2">Grass System with Cutting</div>
 
-                    <div style="display: flex; margin: 10px" id="type"></div>
+                    <div style="display: flex; margin: 10px" id="type2"></div>
                 </div>
                 <div class="SubDivHolder">
                     <div class="SubDiv">
                         <div class="section">
-                            <div id="tinyLink" style="font-size: 10px"></div>
+                            <div id="tinyLink2" style="font-size: 10px"></div>
                             <div><span class="dates">Description: </span></div>
-                            <div id="postdescription" class="post_description">
-                                
-                            </div>
+                            <div id="postdescription2" class="post_description"></div>
+                            Grass system basic setup with cutting
                         </div>
 
                         <div class="section">
                             <div><span class="postLink" id="postlink">Free post </span> Free resources!</div>
+                            <div><span class="postLink" id="postlink">Runtime script </span> Free resources!</div>
                         </div>
                         <div class="sectionbackground">
                             Source Files:
-                            <div id="sourcelinks"></div>
-                        </div>
-                        <div class="section" id="extraLinks"></div>
-
-                        <div class="section" style="position: absolute; bottom: 5px; max-width: 450px">
-                            <div class="dropdown-content">
-                                <span class="dates">Permission: </span> This asset can be used in both free and
-                                commercial projects. You can modify it to suit your own needs. Credit is not necessary,
-                                but highly appreciated. You may not resell the assets on their own.
+                            <div id="sourcelinks2">
+                                <span class="patreonDownloadLink"
+                                    ><a href="https://www.patreon.com/posts/snow-and-icicles-118519905"
+                                        >DOWNLOAD
+                                    </a></span
+                                >
                             </div>
                         </div>
+                        <div class="section" id="extraLinks2"></div>
                     </div>
 
                     <div class="SubDiv">
                         <img
                             class="post-image-holder"
-                            id="postPreview"
-                            src="/tutorials/Images/empty.png"
+                            id="postPreview2"
+                            src="/tutorials/Images/Avif/grass_system_cutting.avif"
                             onerror="this.onerror=null; this.src='/tutorials/Images/Gifs/placeholder.png';" />
 
-                        <div class="section" id="dates"></div>
+                        <div class="section" id="dates2"></div>
                         <div class="section" style="display: flex">
                             <div>
                                 <span class="dates"><tag></tag> Tags: </span>
