--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 
                 <a href="https://twitter.com/minionsart"><twitter></twitter></a>
 
+                <a href="https://bsky.app/profile/minionsart.bsky.social"><bluesky></bluesky></a>
+
                 <a href="https://www.youtube.com/c/MinionsArt"><youtube></youtube></a>
 
                 <a href="https://www.twitch.tv/minionsart"><twitch></twitch></a>
